@@ -19,17 +19,20 @@ RESTRICT="test"
 # Tests do not run, which may be an upstream issue:
 # https://github.com/borntyping/python-dice/issues/25
 
-DEPEND="test? ( dev-python/tox[${PYTHON_USEDEP}] )"
-RDEPEND="
+DEPEND="test? (
 	dev-python/coverage[${PYTHON_USEDEP}]
-	dev-python/docopt[${PYTHON_USEDEP}]
-	dev-python/pyparsing[${PYTHON_USEDEP}]
-	dev-python/termcolor[${PYTHON_USEDEP}]
 	dev-python/pyflakes[${PYTHON_USEDEP}]
 	dev-python/pytest[${PYTHON_USEDEP}]
 	dev-python/pytest-cov[${PYTHON_USEDEP}]
 	dev-python/pytest-flakes[${PYTHON_USEDEP}]
 	dev-python/pytest-pep8[${PYTHON_USEDEP}]
+	dev-python/termcolor[${PYTHON_USEDEP}]
+	dev-python/tox[${PYTHON_USEDEP}]
+	)
+"
+RDEPEND="
+	dev-python/docopt[${PYTHON_USEDEP}]
+	>=dev-python/pyparsing-2.4.1[${PYTHON_USEDEP}]
 "
 
 src_prepare() {
